# sensorbasenode

./: .replit  README.md  protocol.h  pyproject.toml
.west/: config
base_node/: CMakeLists.txt  Kconfig  main.c  prj.conf  uart_protocol.c  uart_protocol.h
base_node/boards/: rpi_pico.overlay
base_node/src/: main.c  sensor_driver.c  sensor_driver.h  sensor_node_driver.c  sensor_node_driver.h
light_sensor_node/: CMakeLists.txt  main.c  tsl2591.c  tsl2591.h
minimal_sensor_node/: CMakeLists.txt  main.c
sensor_node/: CMakeLists.txt  bme680.c  bme680.h  main.c  mcp9700.c  mcp9700.h  pico_sdk_import.cmake  protocol.h  sensor_node.c  sensors.c  sensors.h  stemma_soil.c  stemma_soil.h  tsl2591.c  tsl2591.h  uart_protocol.c  uart_protocol.h
sensor_node/hardware/: adc.h  gpio.h  i2c.h  timer.h  uart.h
sensor_node/pico/: stdlib.h
sensor_node/pico_sdk/: pico_sdk_init.cmake
sensor_node_zephyr/: CMakeLists.txt  Kconfig  prj.conf  west.yml
sensor_node_zephyr/boards/: rpi_pico.overlay
sensor_node_zephyr/src/: main.c  mcp9700.c  mcp9700.h  protocol.h  stemma_soil.c  stemma_soil.h  tsl2591.c  tsl2591.h  uart_protocol.c  uart_protocol.h
sim_light_sensor/: Makefile  light_sensor_sim  main.c  tsl2591_sim.c  tsl2591_sim.h
zephyr_base_node/app/: CMakeLists.txt  prj.conf  rpi_pico.overlay
zephyr_base_node/app/src/: main.c
zephyr_base_node/driver/: Kconfig  bme680.h  sensor_node_driver.c  sensor_node_driver.h
zephyr_base_node/driver/dts/bindings/sensor/: garden,sensor-node.yaml
